# ft_turing

./: Makefile  README.md  dune-project  ft_turing.opam
assembly_files/: unary_add.s  unary_sub.s  utm.s
lib/: compiler.md  compiler.ml  debug.ml  dune  turing.ml  utm_cheatsheet.txt
machine_examples/: language_detector_0^2n.json  language_detector_0^n1^n.json  palindrom.json  unary_add.json
src/: turing.cmo  turing.ml
test/: dune  test_ft_turing.ml
tests/: tests.ml
